<resources>
    <string name="app_name">GoodWillBook</string>
    <string name="application_name">Goodwill Book</string>
    <string name="app_tagline">Makes money secure</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile number</string>
    <string name="enter_mobno">Enter your mobile number</string>
    <string name="verify_otp">Verify Otp</string>
    <string name="send_otp">Send Otp</string>
    <string name="my_mobno">9898417345</string>
    <string name="code">123456</string>
    <string name="enter_otp">Enter otp</string>
    <string name="resend_otp">Resend Otp</string>
    <string name="timer">Timer</string>
    <string name="noInternetConnection">No internet connection found!</string>
    <string name="DbException_string">Something went wrong, please try after sometime!</string>
    <string name="JSONException_string">Something went wrong, please try again later!</string>
    <string name="errorInFunction_string">Something went wrong, internal issue had occured try again later!</string>
    <string name="onError_error">Network error occured, please try after sometime!</string>
    <string name="Glide_onLoadFailed">Failed to load image!</string>
    <string name="api_function_error">Internal error found!</string>
    <string name="success">success</string>
    <string name="status">status</string>
    <string name="message">message</string>
    <string name="notificationStatus">notificationStatus</string>
    <string name="onError">onErrorResponse</string>
    <string name="business_name">Business name</string>
    <string name="enter_business_name">Enter business name</string>
    <string name="add">Add</string>
    <string name="account_setup">Hold on, setting up your account!</string>
    <string name="view_detail"><u>View detail</u></string>
    <string name="business_info">Business Info</string>
    <string name="faq">FAQ</string>
    <string name="terms_and_conditions">Terms &amp; conditions</string>
    <string name="add_business">Add new business</string>
    <string name="logout">Logout</string>
    <string name="generate_report">Generate report</string>
    <string name="generate_pdf">Generate pdf</string>
    <string name="update_profile">Update profile</string>
    <string name="update">Update</string>
    <string name="emailid">Emailid</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="notavailable">Not available</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="manage_transaction_password">Manage transaction password</string>
    <string name="choose_from_below">Choose from below</string>
    <string name="change_password">Change password</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="or">OR</string>
    <string name="no_data_found">No data found</string>
    <string name="no_user_found">No user found in DB</string>
    <string name="temp_username">Name</string>

    <string name="contact_number">Contact number</string>
    <string name="pan_card_number">Pan card number</string>
    <string name="detail">Detail</string>
    <string name="address">Address</string>
    <string name="location">Location</string>
    <string name="tap_here_to_view_location_on_map">Tap here to view location on map</string>
    <string name="enter_business_contactno">Enter business contact number</string>
    <string name="enter_business_pancard_no">Enter business pan card number</string>
    <string name="enter_business_detail">Enter business detail</string>
    <string name="enter_business_address">Enter business address</string>
    <string name="tap_here_to_choose_emailid">Tap here to choose emailid</string>
    <string name="contact_list">Contact list</string>
    <string name="contact_name">Contact name</string>
    <string name="to_give">To Give:</string>
    <string name="will_receive">Will receive:</string>
    <string name="settled">Settled:</string>
    <string name="pay">Pay</string>
    <string name="_100">₹ 100</string>
    <string name="_50">₹ 50</string>
    <string name="choose_business">Choose business</string>
    <string name="amount">Amount</string>
    <string name="enter_amount_to_pay">Enter your amount to pay</string>
    <string name="remark">Remark</string>
    <string name="enter_remark">Enter your remark</string>
    <string name="attach_photo">Attach photo</string>
    <string name="tap_here_to_choose_photo">Tap here to choose photo</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="refresh">Refresh</string>
    <string name="choose_date">Choose date</string>
    <string name="tap_here_to_choose_date">Tap here to choose date</string>
    <string name="choose_time">Choose time</string>
    <string name="tap_here_to_choose_time">Tap here to choose time</string>
    <string name="given_at">Given at</string>
    <string name="appoved_at">Appoved at</string>
    <string name="approved_location">Approved location</string>
    <string name="given_location">Given location</string>
    <string name="attachments">Attachments</string>
    <string name="tap_here_to_view_attachments">Tap here to view attachments</string>
    <string name="approve">Approve</string>
    <string name="you_gave">You gave</string>
    <string name="you_got">You got</string>
    <string name="update_transaction_details">Update transaction details</string>
    <string name="tap_to_zoom">Double Tap, to zoom</string>
    <string name="no_notification_found">No notification found</string>
    <string name="no_transaction_occured">No transaction occured</string>
    <string name="call">Call</string>
    <string name="contact_search">Contact search</string>
    <string name="tempdatetime">01-Feb-2020 03:10:40</string>
    <string name="send">Send</string>
    <string name="short_description">Short description</string>
    <string name="enter_short_desc">Enter short description</string>
    <string name="long_description">Long description</string>
    <string name="enter_long_desc">Enter long description</string>
    <string name="feedback">Feedback</string>
    <string name="send_us_feedback">Send us feedback</string>
    <string name="set_remainder">Set Remainder</string>
    <string name="no_reminderhas_been_set">No reminder has been set</string>
    <string name="remainder">Remainder</string>
    <string name="view_reminder">View reminder</string>
    <string name="transactionenable_disablepassword">Disable password</string>
    <string name="enter_transaction_password">Enter transaction password</string>
    <string name="app_lock">App lock</string>
    <string name="sort_or_filter">Sort or filter</string>
    <string name="date">Date</string>
    <string name="date_range">Date range</string>
    <string name="amount_low_to_high">Amount low to high</string>
    <string name="amount_high_to_low">Amount high to low</string>
    <string name="remove_filter">Remove filter</string>
    <string name="show_all_settled">Show all settled</string>
    <string name="show_all_payables">Show all payables</string>
    <string name="show_all_receivables">Show all receivables</string>
    <string name="open_pdf_no_app_found">No application found to open pdf!</string>
    <string name="share_transaction_details">Share transaction details</string>
    <string name="error_in_takeScreenShot">Unable to take screenshot</string>
    <string name="notification_settings">Notification settings</string>
    <string name="generateQRcodeError">Something went wrong in generating QR code, please try again later!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="myqrcodehint">Above <b>QR code</b> can be use by friends &amp; Goodwill users to pay you instantly!</string>
    <string name="scanqrcodehint">Place camera on the <b>QR code</b> to pay instantly!</string>
    <string name="errorinscanningqr">Something went wrong in scanning, try again later..!</string>
    <string name="invalidqrcode">Invalid QR code!</string>

</resources>
