<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/mwhite"
    tools:context=".Profile.Updateprofile">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mwhite">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:layout_alignParentTop="true"
            app:title="@string/update_profile"/>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appbar"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/margin15">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernametlo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                app:boxBackgroundColor="@color/mwhite"
                app:helperTextEnabled="true"
                app:helperText="@string/enter_your_name"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLength="30"
                    android:text=""
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/margin15">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/testSize16"
                    android:textColor="@color/mgray"
                    android:textStyle="bold"
                    android:fontFamily="@font/app_font_bold"
                    android:text="@string/emailid"
                    />

                <TextView
                    android:id="@+id/emailid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/testSize14"
                    android:textColor="@color/mblack"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/margin5"
                    android:fontFamily="@font/app_font_bold"
                    android:hint="@string/notavailable"
                    android:textColorHint="@color/mblack"
                    />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/updateprofilebt"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin20"
                android:text="@string/update"
                android:textColor="@color/colorPrimary" />


        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/progresslo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:background="@color/progresslo_bgcolor">

        <com.github.ybq.android.spinkit.SpinKitView
            style="@style/SpinKitView.Wave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:SpinKit_Color="@color/mblack" />

    </RelativeLayout>

</RelativeLayout>