<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Verification"
    android:background="@color/mwhite">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin20"
            android:gravity="center"
            android:text="@string/application_name"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mobilenotf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin20"
            android:layout_marginStart="@dimen/margin50"
            android:layout_marginEnd="@dimen/margin50"
            android:hint="@string/mobile_number"
            app:boxBackgroundColor="@color/mwhite"
            app:helperTextEnabled="true"
            app:helperText="@string/enter_mobno"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:prefixText="+91"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mobileno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="10"
                android:text=""
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/sendotpbt"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin20"
            android:text="@string/send_otp"
            android:textColor="@color/colorPrimary" />


    </LinearLayout>
    </ScrollView>

</RelativeLayout>