<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Verification"
    android:background="@color/mwhite">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mwhite">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:layout_alignParentTop="true"
            app:title="@string/add_business"/>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/businessnametlo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin20"
                android:layout_marginStart="@dimen/margin50"
                android:layout_marginEnd="@dimen/margin50"
                android:hint="@string/business_name"
                app:boxBackgroundColor="@color/mwhite"
                app:helperTextEnabled="true"
                app:helperText="@string/enter_business_name"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/businessname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLength="30"
                    android:text=""
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/addbusinessbt"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin20"
                android:text="@string/add"
                android:textColor="@color/colorPrimary" />


        </LinearLayout>
    </ScrollView>


    <RelativeLayout
        android:id="@+id/progresslo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:background="@color/progresslo_bgcolor">

        <com.github.ybq.android.spinkit.SpinKitView
            style="@style/SpinKitView.Wave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:SpinKit_Color="@color/mblack" />

    </RelativeLayout>


</RelativeLayout>